# MeeCore

./: .ctags  .gitignore  CMakeLists.txt  Main.c  SystemDefinition.h  SystemSettings.h  Systems.c  Systems.cpp  Systems.h  platformio.ini  project.yml  tags  util.h
Callback/: Callback.c  Callback.h
Debug/: Debug.c  Debug.h  DebugSettings.h
Drivers/PC/: pc_IODriver.c  pc_TimerDriver.c
IO/: IO.c  IO.h  IODriver.h
IO/Drivers/: pc_IODriver.c
Iterator/: Iterator.c  Iterator.h  IteratorSettings.h
Random/: Random.c  Random.h
Systems/: SystemDefinition.h  Systems.c  Systems.h  SystemsSettings.h
Systems/IO/: SystemsIO.c  SystemsIO.h  SystemsIOSettings.h
Task/: Task.c  Task.h  TaskSettings.h
Timer/: Timer.c  Timer.h
TimerMs/: TimerMs.c
TimerMs/Drivers/: pc_TimerDriver.c
include/mc/: Callback.h  IO.h  IOSettings.h  Iterator.h  Systems.h  SystemsIO.h  TaskSettings.h  TimerMs.h  common.h  debug.h  event.h  io.h  list.h  resource.h  status.h  stream.h  time.h  util.h  utils.h
ports/arduino/: arduino_serial_io.cpp  arduino_serial_io.h
ports/pc/: pc_TimerDriver.c
src/: util.h
src/Callback/: Callback.c
src/Debug/: Debug.h  DebugSettings.h
src/IO/: IO.c  IOSettings.h
src/Systems/: Systems.c
src/Timer/: Timer.c  TimerDriver.h
src/core/: Callback.c  Debug.c  IO.c  Iterator.c  Systems.c  SystemsIO.c  Task.c  TimerMs.c  debug.c  event.c  io.c  list.c  resource.c  status.c  stream.c  time.c  utils.c
src/hal/: RandomDriver.h  TimerMsDriver.h
test/: mc_test.cpp  mc_test.h
tests/: test_debug.c  test_event.c  test_io.c  test_list.c
(+146 files in other folders)
